WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203721
gcSafeMemmove references undefined slowPathBackwardsMemmove on non-gcc compatible compilers
https://bugs.webkit.org/show_bug.cgi?id=203721
Summary
gcSafeMemmove references undefined slowPathBackwardsMemmove on non-gcc compat...
Tadeu Zagallo
Reported
2019-10-31 21:14:15 PDT
...
Attachments
Patch
(1.52 KB, patch)
2019-10-31 21:15 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2019-10-31 21:15:49 PDT
Created
attachment 382547
[details]
Patch
Fujii Hironori
Comment 2
2019-10-31 21:17:20 PDT
Comment on
attachment 382547
[details]
Patch LGTM. Thank you very much.
Tadeu Zagallo
Comment 3
2019-10-31 21:18:54 PDT
Thanks for the review!
WebKit Commit Bot
Comment 4
2019-10-31 22:01:46 PDT
Comment on
attachment 382547
[details]
Patch Clearing flags on attachment: 382547 Committed
r251909
: <
https://trac.webkit.org/changeset/251909
>
WebKit Commit Bot
Comment 5
2019-10-31 22:01:48 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-10-31 22:02:18 PDT
<
rdar://problem/56806865
>
Alexey Proskuryakov
Comment 7
2019-11-02 17:52:56 PDT
Reverted in
r251967
together with
r251875
, because this patch was conflicting with the rollback. Sorry for the inconvenience.
Alexey Proskuryakov
Comment 8
2019-11-03 10:19:57 PST
I'm not sure if this was a fix after
r251875
, or a fix of its own (didn't look at the code). Please close or re-land as appropriate.
Yusuke Suzuki
Comment 9
2021-04-20 01:57:16 PDT
It is already landed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug