gcSafeMemmove references undefined slowPathBackwardsMemmove on non-gcc compatible compilers https://bugs.webkit.org/show_bug.cgi?id=203721

Reviewed by Fujii Hironori.

* heap/GCMemoryOperations.h:
(JSC::gcSafeMemmove):


Canonical link: https://commits.webkit.org/217087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251909 268f45cc-cd09-0410-ab3c-d52691b4dbfc